terraform/vpc.tf
resource "aws_vpc" "GS-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "GS-vpc"
  }
}
